--- a/MapMaven/Components/MainLayout.razor
+++ b/MapMaven/Components/MainLayout.razor
@@ -8,7 +8,7 @@
 @inject IDialogService DialogService
 @inject IServiceProvider ServiceProvider
 
-<MudThemeProvider Theme="MapMavenTheme.Theme" />
+<MudThemeProvider Theme="MapMavenTheme.Theme" IsDarkMode="true" />
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
