--- a/MapMaven/Components/Maps/ImprovementTweaker.razor
+++ b/MapMaven/Components/Maps/ImprovementTweaker.razor
@@ -1,6 +1,4 @@
-﻿@using MudExtensions.Enums
-
-@inherits ReactiveComponent
+﻿@inherits ReactiveComponent
 
 <MudDrawer Open="true"
            Fixed="false"
