--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -5,7 +5,7 @@
 
 
 <TemplateColumn T="Map" Sortable="false" Resizable="false" ShowColumnOptions="false" HeaderStyle="width:0%; padding: 0;" CellStyle="padding: 0;"
-                Filterable="false" IsEditable="false">
+                Filterable="false" Editable="false">
     <HeaderTemplate>
         @if (Selectable)
         {
