--- a/MapMaven/Components/Maps/MapList.razor
+++ b/MapMaven/Components/Maps/MapList.razor
@@ -82,7 +82,7 @@
         </TemplateColumn>
     </Columns>
     <PagerContent>
-        <MudDataGridPager T="Map" PageSizeOptions="[8]" DisableRowsPerPage="true" />
+        <MudDataGridPager T="Map" PageSizeOptions="[8]" PageSizeSelector="false" />
     </PagerContent>
 </MudDataGrid>
 
