--- a/MapMaven/Components/Playlists/PlaylistEditor.razor
+++ b/MapMaven/Components/Playlists/PlaylistEditor.razor
@@ -19,7 +19,7 @@
             Variant="Variant.Outlined"
             @bind-Value="EditPlaylistModel.Name"
             For="() => EditPlaylistModel.Name"
-            Class="mb-4 mt-0" />
+            Class="mb-4" />
         <MudTextField
             Label="Description"
             Variant="Variant.Outlined"
