--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -42,7 +42,7 @@ else
             <DialogContent>
                 <PlaylistEditor EditPlaylistModel="SelectedPlaylist"></PlaylistEditor>
                 <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
-                    <MudList T="string">
+                    <MudList ReadOnly="true" T="string">
                         <MudListItem Class="py-0">
                             <div class="d-flex flex-row align-center">
                                 <b class="mud-list-subheader pa-0 mr-1">Map pool</b>
@@ -82,7 +82,7 @@ else
                 @if (configuration.MapPool == MapPool.Improvement)
                 {
                     <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
-                        <MudList T="string">
+                        <MudList ReadOnly="true" T="string">
                             <MudListItem Class="py-0">
                                 <div class="d-flex flex-row align-center">
                                     <b class="mud-list-subheader pa-0 mr-1">Leaderboard</b>
@@ -95,7 +95,7 @@ else
                     </MudPaper>
                 }
                 <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
-                    <MudList T="string">
+                    <MudList ReadOnly="true" T="string">
                         <MudListSubheader Class="d-flex align-center justify-space-between">
                             Filters
                             <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddFilterOperation" />
@@ -110,7 +110,7 @@ else
                 </MudPaper>
 
                 <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
-                    <MudList T="string">
+                    <MudList ReadOnly="true" T="string">
                         <MudListSubheader Class="d-flex align-center justify-space-between">
                             Sorting
                             <MudIconButton Icon="@Icons.Material.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
