--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -27,56 +27,8 @@
         }
         <div class="full-height" style="overflow-y: auto;">
             <MudTreeView>
-                @foreach (var item in PlaylistTree.RootPlaylistFolder.ChildItems)
-                {
-                    @if (item is PlaylistTreeNode<Playlist> playlistNode)
-                    {
-                        <MudTreeViewItem Value="playlistNode.Playlist" Class="not-expandable" CanExpand="false">
-                            <BodyContent>
-                                <div class="playlist-list-item">
-                                    <PlaylistCover Playlist="playlistNode.Playlist" Small="true" Class="ml-3 mr-3" Style="width: 30px"></PlaylistCover>
-                                    <span>@playlistNode.Playlist.Title</span>
-                                    <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
-                                        <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlistNode.Playlist)">
-                                            <div class="d-flex">
-                                                <MudIcon Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Class="mr-1" /> Edit
-                                            </div>
-                                        </MudMenuItem>
-                                        <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlistNode.Playlist)">
-                                            <div class="d-flex">
-                                                <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" Class="mr-1" /> Delete
-                                            </div>
-                                        </MudMenuItem>
-                                    </MudMenu>
-                                </div>
-                            </BodyContent>
-                        </MudTreeViewItem>
-                    }
-                }
+                <PlaylistTreeViewFolder Folder="PlaylistTree.RootPlaylistFolder"></PlaylistTreeViewFolder>
             </MudTreeView>
-            @*             @foreach (var playlist in Playlists)
-            {
-
-
-            <MudListItem title="@playlist.Title" OnClick="() => OnPlaylistSelect(playlist)" Class="@(playlist == SelectedPlaylist ? "mud-selected-item mud-primary-text py-0 px-1" : "py-0 px-1")" Style="height: 46px;">
-            <div class="playlist-list-item">
-            <PlaylistCover Playlist="playlist" Small="true" Class="ml-3 mr-3" Style="width: 30px"></PlaylistCover>
-            <span>@playlist.Title</span>
-            <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
-            <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">
-            <div class="d-flex">
-            <MudIcon Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Class="mr-1" /> Edit
-            </div>
-            </MudMenuItem>
-            <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">
-            <div class="d-flex">
-            <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" Class="mr-1" /> Delete
-            </div>
-            </MudMenuItem>
-            </MudMenu>
-            </div>
-            </MudListItem>
-            } *@
         </div>
     </MudList>
 
