--- a/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
+++ b/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
@@ -15,9 +15,9 @@
         <MudTreeViewItem Value="playlistNode.Playlist" Class="not-expandable" CanExpand="false">
             <BodyContent>
                 <div class="playlist-list-item">
-                    <PlaylistCover Playlist="playlistNode.Playlist" Small="true" Class="ml-3 mr-3" Style="width: 30px"></PlaylistCover>
+                    <PlaylistCover Playlist="playlistNode.Playlist" Class="ml-3 mr-3" Style="width: 30px"></PlaylistCover>
                     <span>@playlistNode.Playlist.Title</span>
-                    <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
+                    <MudMenu Icon="@Icons.Material.Filled.MoreVert" Size="Size.Small" Class="ml-auto">
                         <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlistNode.Playlist)">
                             <div class="d-flex">
                                 <MudIcon Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Class="mr-1" /> Edit
