--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -26,7 +26,7 @@
             <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
         }
         <div class="full-height" style="overflow-y: auto;">
-            <MudTreeView T="Playlist" SelectedValue="SelectedPlaylist" SelectedValueChanged="OnPlaylistSelect">
+            <MudTreeView T="Playlist" SelectedValue="SelectedPlaylist" SelectedValueChanged="OnPlaylistSelect" ExpandOnClick="true">
                 <PlaylistTreeViewFolder Folder="PlaylistTree.RootPlaylistFolder"></PlaylistTreeViewFolder>
             </MudTreeView>
         </div>
