--- a/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
+++ b/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
@@ -5,7 +5,7 @@
 {
     @if (item is PlaylistFolder<Playlist> playlistFolder)
     {
-        <MudTreeViewItem T="Playlist" Text="@playlistFolder.FolderName">
+        <MudTreeViewItem T="Playlist" Text="@playlistFolder.FolderName" Expanded="Expanded">
             <PlaylistTreeViewFolder Folder="playlistFolder"></PlaylistTreeViewFolder>
         </MudTreeViewItem>
     }
@@ -73,6 +73,9 @@
 
     [Parameter]
     public PlaylistFolder<Playlist> Folder { get; set; }
+
+    [Parameter]
+    public bool Expanded { get; set; }
 
     Playlist? PlaylistToDelete = null;
     bool DeleteDialogVisible = false;
