--- a/MapMaven/Components/Playlists/PlaylistEditor.razor
+++ b/MapMaven/Components/Playlists/PlaylistEditor.razor
@@ -1,4 +1,6 @@
-﻿<MudGrid>
+﻿@using BeatSaberPlaylistsLib
+
+<MudGrid>
     <MudItem xs="6">
         <MudPaper Height="300px" Outlined="true" Class="relative rounded-lg border-2 border-dashed pa-4 mud-width-full mud-height-full d-flex align-center flex-column justify-center">
             <InputFile OnChange="OnInputFileChanged" class="absolute mud-width-full mud-height-full overflow-hidden z-2" style="opacity:0;" />
@@ -14,17 +16,27 @@
         </MudPaper>
     </MudItem>
     <MudItem xs="6">
-        <MudTextField
-            Label="Name"
-            Variant="Variant.Outlined"
-            @bind-Value="EditPlaylistModel.Name"
-            For="() => EditPlaylistModel.Name"
-            Class="mb-4" />
-        <MudTextField
-            Label="Description"
-            Variant="Variant.Outlined"
-            @bind-Value="EditPlaylistModel.Description"
-            For="() => EditPlaylistModel.Description"
-            Lines="3" />
+        <MudTextField Label="Name"
+                      Variant="Variant.Outlined"
+                      @bind-Value="EditPlaylistModel.Name"
+                      For="() => EditPlaylistModel.Name"
+                      Class="mb-4" />
+        <MudSelect T="PlaylistManager"
+                   @bind-Value="EditPlaylistModel.PlaylistManager"
+                   For="() => EditPlaylistModel.PlaylistManager"
+                   Class="mb-4"
+                   Label="Folder"
+                   Variant="Variant.Outlined"
+                   FullWidth="true">
+            @foreach (var playlistManager in PlaylistManagers)
+            {
+                <MudSelectItem Value="@playlistManager">@BeatSaberFileService.GetRelativePlaylistPath(playlistManager.PlaylistPath)</MudSelectItem>
+            }
+        </MudSelect>
+        <MudTextField Label="Description"
+                      Variant="Variant.Outlined"
+                      @bind-Value="EditPlaylistModel.Description"
+                      For="() => EditPlaylistModel.Description"
+                      Lines="3" />
     </MudItem>
 </MudGrid>
