Fixed selecting playlists with same name in different folders

--- a/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
+++ b/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
@@ -10,7 +10,7 @@
                 @playlistFolder.FolderName
             </BodyContent>
             <ChildContent>
-                <PlaylistTreeViewFolder Folder="playlistFolder"></PlaylistTreeViewFolder>
+                <PlaylistTreeViewFolder Folder="playlistFolder" Expanded="Expanded"></PlaylistTreeViewFolder>
             </ChildContent>
         </MudTreeViewItem>
     }
